Added Wordpress redis host for cacheing

--- a/Docker/Wordpress/WPImage/docker-compose.yml
+++ b/Docker/Wordpress/WPImage/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 1080:80 #You can change port 1080 to any avaiable port on your network.   
     volumes:
-      - wordpress:/var/www/html #You can change the directory /dockerdata/ to any of your choice but keep the ending /wordpress as is
+      - wordpress:/var/www/html
 
   wordpressdb:
     build:
@@ -19,10 +19,12 @@ services:
     image: moneydontbuyclass/wordpresspidb
     container_name: wordpressdb
     restart: always
-    environment:
-      - MYSQL_ROOT_PASSWORD=rootpassword
     volumes:
-      - wordpressdb:/var/lib/mysql #You can change the directory /dockerdata/ to any of your choice but keep the ending /wordpress/db as is. the database needs to be in the wordpress container directory.
+      - wordpressdb:/var/lib/mysql
+
+  wordpressredis:
+    image: "redis:alpine"
+    container_name: wordpressredis
 
 volumes:
   wordpress: {}
