--- a/Docker/Wordpress/docker-compose.yml
+++ b/Docker/Wordpress/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - /dockerdata/wordpress:/var/www/html #You can change the directory /dockerdata/ to any of your choice but keep the ending /wordpress as is
       - /dockerdata/wordpress/conf.d:/usr/local/etc/php/conf.d #You can change the directory /dockerdata/ to any of your choice but keep the ending /wordpress/conf.d as is
+#to ssh use docker exec -it wordpress /bin/bash
 
   db:
     image: mysql
