--- a/Docker/NginxProxyManager/docker-compose.yml
+++ b/Docker/NginxProxyManager/docker-compose.yml
@@ -15,13 +15,16 @@ services:
     volumes:
       - nginxproxymanagerpi:/var/www/html
       - nginxproxymanagerpile:/etc/letsencrypt
+    depends_on:
+      - nginxproxymanagerpidb
+      - nginxproxymanagerpistats
 
   nginxproxymanagerpidb:
     build:
       context: ./mariadb
     image: moneydontbuyclass/nginxproxymanagerpidb
     container_name: nginxproxymanagerpidb
-    restart: always
+    restart: unless-stopped
     volumes:
       - nginxproxymanagerpidb:/var/lib/mysql
 
