--- a/Docker/NginxProxyManager/mariadb/Dockerfile
+++ b/Docker/NginxProxyManager/mariadb/Dockerfile
@@ -1,4 +1,4 @@
-FROM jc21/mariadb-aria:latest
+FROM yobasystems/alpine-mariadb:latest
 
 LABEL "Project"="Nginx Proxy Manager Pi"
 LABEL "Author"="Javad Ali"
@@ -7,5 +7,3 @@ ENV MYSQL_DATABASE="nginxproxymanagerpi"
 ENV MYSQL_USER="admin"
 ENV MYSQL_PASSWORD="password"
 ENV MYSQL_ROOT_PASSWORD="rootpassword"
-
-EXPOSE 3306
