--- a/Docker/NginxProxyManager/nginxproxymanager/Dockerfile
+++ b/Docker/NginxProxyManager/nginxproxymanager/Dockerfile
@@ -3,9 +3,8 @@ FROM jc21/nginx-proxy-manager:latest
 LABEL "Project"="Nginx Proxy Manager Pi"
 LABEL "Author"="Javad Ali"
 
-ENV DB_MYSQL_HOST="nginxproxymanagerpidb:3306"
+ENV DB_MYSQL_HOST="nginxproxymanagerpidb"
 ENV DB_MYSQL_USER="admin"
-ENV DB_MYSQL_ASSWORD="password" 
+ENV DB_MYSQL_PASSWORD="password" 
 ENV DB_MYSQL_NAME="nginxproxymanagerpi"
-
-EXPOSE 81
+ENV DB_MYSQL_PORT="3306"
