--- a/Docker/NginxProxyManager/goaccess/Dockerfile
+++ b/Docker/NginxProxyManager/goaccess/Dockerfile
@@ -1,4 +1,4 @@
-FROM justsky/goaccess-for-nginxproxymanager:latest
+FROM xavierh/goaccess-for-nginxproxymanager:latest
 
 LABEL "Project"="Nginx Proxy Manager Pi"
 LABEL "Author"="Javad Ali"
@@ -6,7 +6,7 @@ LABEL "Author"="Javad Ali"
 ENV PUID="0"
 ENV PGID="0"
 ENV TZ="America/New_York"
-ENV SKIP_ARCHIVED_LOGS="False"
-ENV BASIC_AUTH="False"
+ENV SKIP_ARCHIVED_LOGS="false"
+ENV BASIC_AUTH="false"
 ENV BASIC_AUTH_USERNAME="user"
 ENV BASIC_AUTH_PASSWORD="Password"
