--- a/Docker/Plex/docker-compose.yml
+++ b/Docker/Plex/docker-compose.yml
@@ -7,14 +7,12 @@ services:
     container_name: Plex
     restart: unless-stopped
     network_mode: host
-    ports:
-      - "25565:25565"
     environment:
-      - PUID=1001 #change for your user. run command id
-      - PGID=1001 #change for your user. run command id
+      - PUID=1001 #change for your user. run command id (pi is 1000, root is 0)
+      - PGID=1001 #change for your user. run command id (pi is 1000, root is 0)
       - TZ=America/New_York
       - VERSION=latest
-      - PLEX_CLAIM=claim-q8w9YSQzSF1dAtymzevv #change this to get your own claim go to plex.tv/claim
+    # - PLEX_CLAIM=  go to plex.tv/claim
     volumes:
       - data:/config
       - /downloads/tvseries:/tv
