updated onlyofficer server

--- a/Docker/OnlyOffice/docker-compose.yml
+++ b/Docker/OnlyOffice/docker-compose.yml
@@ -9,12 +9,12 @@ services:
       - JWT_SECRET=oracleadmin
       - WOPI_ENABLED=true
     volumes:
-      - data:/var/www/onlyoffice/Data
-      - /var/lib/docker/volumes/onlyoffice_data/_data/logs:/var/log/onlyoffice
-      - /var/lib/docker/volumes/onlyoffice_data/_data/lib:/var/lib/onlyoffice
-      - /var/lib/docker/volumes/onlyoffice_data/_data/db:/var/lib/postgresql
+      - /var/lib/docker/volumes/onlyoffice_data/_data/DocumentServer/data:/var/www/onlyoffice/Data
+      - /var/lib/docker/volumes/onlyoffice_data/_data/DocumentServer/logs:/var/log/onlyoffice
+      - /var/lib/docker/volumes/onlyoffice_data/_data/DocumentServer/lib:/var/lib/onlyoffice
+      - /var/lib/docker/volumes/onlyoffice_data/_data/DocumentServer/db:/var/lib/postgresql
     ports:
-      - 20801:80
+      - 2080:80
     restart: always
 
 volumes:
