updated jenkins docker

--- a/Docker/Jenkins/Dockerfile
+++ b/Docker/Jenkins/Dockerfile
@@ -6,5 +6,5 @@ LABEL "Author"="Javad Ali"
 EXPOSE 80
 EXPOSE 50000
 
-ADD config.sh /config.sh
-RUN chmod +x /config.sh && /config.sh
+ADD config.sh /scripts/config.sh
+RUN chmod +x /scripts/config.sh && /scripts/config.sh
