--- a/Docker/Jenkins/Dockerfile
+++ b/Docker/Jenkins/Dockerfile
@@ -7,4 +7,5 @@ EXPOSE 80
 EXPOSE 50000
 
 ADD config.sh /scripts/config.sh
-RUN chmod +x /scripts/config.sh && /scripts/config.sh
+RUN chmod +x /scripts/config.sh
+RUN /scripts/config.sh bin/sh
