--- a/Docker/Jenkins/Dockerfile
+++ b/Docker/Jenkins/Dockerfile
@@ -3,9 +3,8 @@ FROM alpine
 LABEL "Project"="Jenkins Pi"
 LABEL "Author"="Javad Ali"
 
-EXPOSE 80
+EXPOSE 8081
 EXPOSE 50000
 
-ADD config.sh /scripts/config.sh
-RUN chmod +x /scripts/config.sh
-RUN bin/sh /scripts/config.sh 
+RUN apk add --no-cache jenkins
+ENTRYPOINT ["jenkins"]
