--- a/Docker/wordpress/wordpress/wordpress/Dockerfile
+++ b/Docker/wordpress/wordpress/wordpress/Dockerfile
@@ -38,4 +38,9 @@ COPY add_wp_redis_host.sh /var/www/html/add_wp_redis_host.sh
 
 RUN chmod +x add_wp_redis_host.sh
 
-RUN /var/www/html/add_wp_redis_host.sh
+COPY run_after_startup.sh /etc/init.d/run_after_startup.sh
+
+RUN ln -s /etc/init.d/run_after_startup.sh /etc/rc.d/
+
+RUN chmod +x /etc/init.d/run_after_startup.sh
+
