--- a/Docker/jenkins/docker-compose.yml
+++ b/Docker/jenkins/docker-compose.yml
@@ -8,5 +8,7 @@ services:
       - jenkins:/var/jenkins_home
     ports:
       - "2080:8080"
+  ssh-agent:
+    image: jenkins/ssh-agent
 volumes:
   jenkins: {}
