--- a/Docker/nginx-proxy-manager/docker-compose.yml
+++ b/Docker/nginx-proxy-manager/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.8'
 
 services:
 
@@ -9,15 +9,21 @@ services:
     container_name: nginxproxymanagerpi
     restart: unless-stopped
     ports:
-      - 80:80
-      - 443:443 
-      - 81:81 #You can change port 81 to any avaiable port on your network.    
+      - "80:80"
+      - "443:443"
+      - "81:81"  # You can change port 81 to any available port on your network.
     volumes:
       - nginxproxymanagerpi:/data
-      - /var/lib/docker/volumes/nginx-proxy-manager_nginxproxymanagerpi/_data/letsencrypt:/etc/letsencrypt
+      - letsencrypt:/etc/letsencrypt
     depends_on:
       - nginxproxymanagerpidb
       - nginxproxymanagerpistats
+    environment:
+      DB_MYSQL_HOST: nginxproxymanagerpidb
+      DB_MYSQL_USER: admin
+      DB_MYSQL_PASSWORD: password
+      DB_MYSQL_NAME: nginxproxymanagerpi
+      DB_MYSQL_PORT: 3306
 
   nginxproxymanagerpidb:
     build:
@@ -26,7 +32,7 @@ services:
     container_name: nginxproxymanagerpidb
     restart: unless-stopped
     volumes:
-      - /var/lib/docker/volumes/nginx-proxy-manager_nginxproxymanagerpi/_data/mariadb:/var/lib/mysql
+      - mariadb:/var/lib/mysql
 
   nginxproxymanagerpistats:
     build:
@@ -35,9 +41,12 @@ services:
     container_name: nginxproxymanagerpistats
     restart: unless-stopped
     ports:
-      - 7880:7880   
+      - "7880:7880"
     volumes:
-      - /var/lib/docker/volumes/nginx-proxy-manager_nginxproxymanagerpi/_data/logs:/opt/log:ro
+      - logs:/opt/log:ro
 
 volumes:
-  nginxproxymanagerpi: {}
+  nginxproxymanagerpi:
+  letsencrypt:
+  mariadb:
+  logs:
