updated wordpress and nextcloud redis container to always restart

--- a/Docker/nextcloud/docker-compose.yml
+++ b/Docker/nextcloud/docker-compose.yml
@@ -27,6 +27,7 @@ services:
   nextcloud_redis:
     image: "redis:alpine"
     container_name: nextcloud_redis
+    restart: always
     volumes:
       - nextcloud_redis:/data
 
