updated nextcloud and wordpress images

--- a/Docker/wordpress/docker-compose.yml
+++ b/Docker/wordpress/docker-compose.yml
@@ -26,7 +26,10 @@ services:
     image: "redis:alpine"
     container_name: wordpressredis
     restart: always
+    volumes:
+      - wordpressredis:/data
 
 volumes:
   wordpress: {}
   wordpressdb: {}
+  wordpressredis: {}
