--- a/Docker/wordpress/docker-compose.yml
+++ b/Docker/wordpress/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - 1080:80 #You can change port 1080 to any avaiable port on your network.   
     volumes:
       - wordpress:/var/www/html
+    depends_on:
+      - wordpressdb
+      - wordpressredis
 
   wordpressdb:
     build:
