updated wordpress image

--- a/Docker/wordpress/docker-compose.yml
+++ b/Docker/wordpress/docker-compose.yml
@@ -28,6 +28,8 @@ services:
   wordpressredis:
     image: "redis:alpine"
     container_name: wordpressredis
+    ports:
+      - 6379:6379
     restart: always
 
 volumes:
