--- a/Docker/wordpress/docker-compose.yml
+++ b/Docker/wordpress/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     image: "redis:alpine"
     container_name: wordpressredis
     restart: always
+    volumes:
     - wordpressredis:/data
 
 volumes:
