updated wordpress image

--- a/Docker/wordpress/mysql/Dockerfile
+++ b/Docker/wordpress/mysql/Dockerfile
@@ -1,9 +1,9 @@
-FROM mysql
+sFROM mysql
 
 LABEL "Project"="Wordpress Pi"
 LABEL "Author"="Javad Ali"
 
-ENV MYSQL_DATABASE="wordpress"
-ENV MYSQL_USER="admin"
-ENV MYSQL_PASSWORD="password"
-ENV MYSQL_ROOT_PASSWORD="rootpassword"
+ENV MYSQL_DATABASE={$dbname}
+ENV MYSQL_USER="admin"{$dbuser}
+ENV MYSQL_PASSWORD={$dbpass}
+ENV MYSQL_ROOT_PASSWORD={$dbrootpass}
