--- a/Docker/wordpress/wordpress/Dockerfile
+++ b/Docker/wordpress/wordpress/Dockerfile
@@ -6,9 +6,9 @@ LABEL "Author"="Javad Ali"
 EXPOSE 80
 
 ENV WORDPRESS_DB_HOST="wordpressdb:3306"
-ENV WORDPRESS_DB_USER="admin"
-ENV WORDPRESS_DB_PASSWORD="password" 
-ENV WORDPRESS_DB_NAME="wordpress"
+ENV WORDPRESS_DB_USER={$dbuser}
+ENV WORDPRESS_DB_PASSWORD={$dbpass}
+ENV WORDPRESS_DB_NAME={$dbname}
 
 RUN apt update && apt install -y unzip
 
@@ -19,9 +19,3 @@ COPY redis-cache.zip /var/www/html/wp-content/plugins/redis-cache.zip
 RUN cd /var/www/html/wp-content/plugins/ && unzip redis-cache.zip && \
     chown -R www-data:www-data redis-cache && \
     chmod -R 775 redis-cache
-
-COPY breeze.zip /var/www/html/wp-content/plugins/breeze.zip
-
-RUN cd /var/www/html/wp-content/plugins/ && unzip breeze.zip && \
-    chown -R www-data:www-data breeze && \
-    chmod -R 775 breeze
