--- a/Docker/wordpress/wordpress/custom.ini
+++ b/Docker/wordpress/wordpress/custom.ini
@@ -1,7 +1,8 @@
 file_uploads = On
-memory_limit = 4G
-upload_max_filesize = 10G
-post_max_size = 10G
-max_execution_time = 6000
-max_input_time = 6000
+memory_limit = 1G
+upload_max_filesize = 2G
+post_max_size = 2G
+max_execution_time = 3600
+max_input_time = 3600
+max_memory_limit = 512M
 extension=mysqli
