updated wordpress image

--- a/Docker/wordpress/wordpress/Dockerfile
+++ b/Docker/wordpress/wordpress/Dockerfile
@@ -6,9 +6,9 @@ LABEL "Author"="Javad Ali"
 EXPOSE 80
 
 ENV WORDPRESS_DB_HOST="wordpressdb:3306"
-ENV WORDPRESS_DB_USER={$dbuser}
-ENV WORDPRESS_DB_PASSWORD={$dbpass}
-ENV WORDPRESS_DB_NAME={$dbname}
+ENV WORDPRESS_DB_USER="admin"
+ENV WORDPRESS_DB_PASSWORD="password"
+ENV WORDPRESS_DB_NAME="wordpress"
 
 RUN apt update && apt install -y unzip
 
