--- a/Docker/wordpress/docker-compose.yml
+++ b/Docker/wordpress/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       WORDPRESS_CONFIG_EXTRA: |
         define( 'WP_REDIS_HOST', 'wordpressredis' );
+        define( 'WP_MEMORY_LIMIT', '512M' );
     depends_on:
       - wordpressdb
       - wordpressredis
